Refactor project structure, fix work section and add css sliders for images

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -49,7 +49,18 @@
       <section class="works">
         <h2 class="works__title">Мои работы</h2>
         <div class="works__item">
-          <img class="works__item__image" src="assets/images/project11.PNG" alt="project demo">
+          <div class="works__item__image slider">
+            <div class="slider__links">
+              <a class="slider__links__link" href="#slide-11"></a>
+              <a class="slider__links__link" href="#slide-12"></a>
+              <a class="slider__links__link" href="#slide-13"></a>
+            </div>
+            <div class="slider__slides">
+              <img class="slider__slides__slide" id="slide-11" src="assets/images/project11.PNG" alt="project demo">
+              <img class="slider__slides__slide" id="slide-12" src="assets/images/project12.PNG" alt="project demo">
+              <img class="slider__slides__slide" id="slide-13" src="assets/images/project13.PNG" alt="project demo">
+            </div>
+          </div>
           <div class="works__item__description">
             <div class="works__item__description__meta">
               <h4>CarFinder</h4>
@@ -61,7 +72,7 @@
               Приложение также предоставляет возможность проверить ликвидность автомобиля по модели и типу кузова.
             </p>
           </div>
-          <ul class="tags">
+          <ul class="works__item__tags tags">
             <li>
               <a class="tags__tag">TypeScript</a>
             </li>
@@ -78,13 +89,24 @@
               <a class="tags__tag">KoaJS</a>
             </li>
             <li>
-              <a class="tags__tag">MongoDB/Mongoose</a>
+              <a class="tags__tag">MongoDB</a>
             </li>
           </ul>
         </div>
         <div class="works__item">
-          <img class="works__item__image" src="assets/images/project21.PNG" alt="project demo">
-          <div class="works__item__description">
+          <div class="works__item__image slider right">
+            <div class="slider__links">
+              <a class="slider__links__link" href="#slide-21"></a>
+              <a class="slider__links__link" href="#slide-22"></a>
+              <a class="slider__links__link" href="#slide-23"></a>
+            </div>
+            <div class="slider__slides">
+              <img class="slider__slides__slide" id="slide-21" src="assets/images/project21.PNG" alt="project demo">
+              <img class="slider__slides__slide" id="slide-22" src="assets/images/project22.PNG" alt="project demo">
+              <img class="slider__slides__slide" id="slide-23" src="assets/images/project23.PNG" alt="project demo">
+            </div>
+          </div>
+          <div class="works__item__description right">
             <div class="works__item__description__meta">
               <h4>Meetup Organizer</h4>
               <a target="_blank" href="https://github.com/synthetiquely/VueDevMeetupApp" class="works__item__link">github.com</a>
@@ -93,7 +115,7 @@
               можно выбрать и присоединиться к уже существующему мероприятию.
             </p>
           </div>
-          <ul class="tags">
+          <ul class="works__item__tags tags right">
             <li>
               <a class="tags__tag">VueJS</a>
             </li>
@@ -109,7 +131,18 @@
           </ul>
         </div>
         <div class="works__item">
-          <img class="works__item__image" src="assets/images/project41.PNG" alt="project demo">
+          <div class="works__item__image slider">
+            <div class="slider__links">
+              <a class="slider__links__link" href="#slide-31"></a>
+              <a class="slider__links__link" href="#slide-32"></a>
+              <a class="slider__links__link" href="#slide-33"></a>
+            </div>
+            <div class="slider__slides">
+              <img class="slider__slides__slide" id="slide-31" src="assets/images/project31.PNG" alt="project demo">
+              <img class="slider__slides__slide" id="slide-32" src="assets/images/project32.PNG" alt="project demo">
+              <img class="slider__slides__slide" id="slide-33" src="assets/images/project33.PNG" alt="project demo">
+            </div>
+          </div>
           <div class="works__item__description">
             <div class="works__item__description__meta">
               <h4>Task Tracker</h4>
@@ -120,7 +153,7 @@
               работой над ним. Разработчики могут создавать и выполнять задания, писать комментарии к заданиям.
             </p>
           </div>
-          <ul class="tags">
+          <ul class="works__item__tags tags">
             <li>
               <a class="tags__tag">VueJS</a>
             </li>
@@ -134,13 +167,24 @@
               <a class="tags__tag">Nodejs</a>
             </li>
             <li>
-              <a class="tags__tag">MongoDB/Mongoose</a>
+              <a class="tags__tag">MongoDB</a>
             </li>
           </ul>
         </div>
         <div class="works__item">
-          <img class="works__item__image" src="assets/images/project31.PNG" alt="project demo">
-          <div class="works__item__description">
+          <div class="works__item__image slider right">
+            <div class="slider__links">
+              <a class="slider__links__link" href="#slide-41"></a>
+              <a class="slider__links__link" href="#slide-42"></a>
+              <a class="slider__links__link" href="#slide-43"></a>
+            </div>
+            <div class="slider__slides">
+              <img class="slider__slides__slide" id="slide-41" src="assets/images/project41.PNG" alt="project demo">
+              <img class="slider__slides__slide" id="slide-42" src="assets/images/project42.PNG" alt="project demo">
+              <img class="slider__slides__slide" id="slide-43" src="assets/images/project43.PNG" alt="project demo">
+            </div>
+          </div>
+          <div class="works__item__description right">
             <div class="works__item__description__meta">
               <h4>Survey App</h4>
               <a target="_blank" href="https://github.com/synthetiquely/SurveyApp" class="works__item__link">github.com</a>
@@ -150,7 +194,7 @@
               созданные опросы. Предоставляет платформу для проведения и анализа результатов проведения опросов.
             </p>
           </div>
-          <ul class="tags">
+          <ul class="works__item__tags tags right">
             <li>
               <a class="tags__tag">React</a>
             </li>
@@ -164,7 +208,7 @@
               <a class="tags__tag">Express</a>
             </li>
             <li>
-              <a class="tags__tag">MongoDB/Mongoose</a>
+              <a class="tags__tag">MongoDB</a>
             </li>
           </ul>
         </div>
