Rewrite texts for header and expectations sections

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,8 +20,10 @@
         <h2 class="header__intro__name">Анатолий Белобровик</h2>
       </div>
       <p class="header__description">
-        Привет, меня зовут Анатолий, я фронт-енд разработчик, и ищу возможности улучшить мои навыки веб-разработки. Пишу на следующих
-        технологиях: TypeScript, React, Redux, VueJS, NodeJS, MongoDB, Webpack, Git.
+        Привет, меня зовут Анатолий и я front-end developer. Свой путь как разработчик я начал относительно недавно, но за это время
+        я многое узнал и понял, что многое еще предстоит понять. За моими плечами есть несколько проектов коммерческого и
+        стартап направления. Владею технологиями: JavaScript, TypeScript, React, Redux, VueJS, NodeJS, MongoDB, Webpack,
+        Git.
       </p>
     </header>
     <main class="content">
@@ -29,16 +31,16 @@
         <h2 class="expectations__title">Мои ожидания</h2>
         <div class="expectations__grid">
           <div class="expectations__grid__item">
-            <h3>Развитие</h3>
-            <p>Разработка медиаплана, анализируя результаты рекламной компании, нейтрализует эмпирический портрет потребителя.</p>
+            <h3>Лучшие практики</h3>
+            <p>Перенять опыт практиков фронт-енд разработки.</p>
           </div>
           <div class="expectations__grid__item">
-            <h3>Сложные задачи</h3>
-            <p>Возможность работать над решением сложных задач</p>
+            <h3>Команда</h3>
+            <p>Участие в проектной разработке.</p>
           </div>
           <div class="expectations__grid__item">
-            <h3>Бред</h3>
-            <p>Тем не менее, создание приверженного покупателя конструктивно.</p>
+            <h3>Узнать Яндекс изнутри</h3>
+            <p>Познакомиться с продуктами и процессами компании изнутри.</p>
           </div>
           <div class="expectations__grid__item">
             <h3>Трудоустройство</h3>
