Add slider for exectations section and improve responsiveness of the whole page

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -30,22 +30,28 @@
       <section class="expectations">
         <h2 class="expectations__title">Мои ожидания</h2>
         <div class="expectations__grid">
-          <div class="expectations__grid__item">
+          <div id="slide-01" class="expectations__grid__item">
             <h3>Лучшие практики</h3>
             <p>Перенять опыт практиков фронт-енд разработки.</p>
           </div>
-          <div class="expectations__grid__item">
+          <div id="slide-02" class="expectations__grid__item">
             <h3>Команда</h3>
             <p>Участие в проектной разработке.</p>
           </div>
-          <div class="expectations__grid__item">
+          <div id="slide-03" class="expectations__grid__item">
             <h3>Узнать Яндекс изнутри</h3>
             <p>Познакомиться с продуктами и процессами компании изнутри.</p>
           </div>
-          <div class="expectations__grid__item">
+          <div id="slide-04" class="expectations__grid__item">
             <h3>Трудоустройство</h3>
             <p>Ищу возможности присоединения к команде, работающей над созданием крутых продуктов.</p>
           </div>
+        </div>
+        <div class="slider__links slider__links_hide-on-desktop">
+          <a class="slider__links__link" href="#slide-01"></a>
+          <a class="slider__links__link" href="#slide-02"></a>
+          <a class="slider__links__link" href="#slide-03"></a>
+          <a class="slider__links__link" href="#slide-04"></a>
         </div>
       </section>
       <section class="works">
@@ -97,15 +103,15 @@
         </div>
         <div class="works__item">
           <div class="works__item__image slider right">
-            <div class="slider__links">
-              <a class="slider__links__link" href="#slide-21"></a>
-              <a class="slider__links__link" href="#slide-22"></a>
-              <a class="slider__links__link" href="#slide-23"></a>
-            </div>
             <div class="slider__slides">
               <img class="slider__slides__slide" id="slide-21" src="assets/images/project21.PNG" alt="project demo">
               <img class="slider__slides__slide" id="slide-22" src="assets/images/project22.PNG" alt="project demo">
               <img class="slider__slides__slide" id="slide-23" src="assets/images/project23.PNG" alt="project demo">
+            </div>
+            <div class="slider__links">
+              <a class="slider__links__link" href="#slide-21"></a>
+              <a class="slider__links__link" href="#slide-22"></a>
+              <a class="slider__links__link" href="#slide-23"></a>
             </div>
           </div>
           <div class="works__item__description right">
@@ -175,15 +181,15 @@
         </div>
         <div class="works__item">
           <div class="works__item__image slider right">
-            <div class="slider__links">
-              <a class="slider__links__link" href="#slide-41"></a>
-              <a class="slider__links__link" href="#slide-42"></a>
-              <a class="slider__links__link" href="#slide-43"></a>
-            </div>
             <div class="slider__slides">
               <img class="slider__slides__slide" id="slide-41" src="assets/images/project41.PNG" alt="project demo">
               <img class="slider__slides__slide" id="slide-42" src="assets/images/project42.PNG" alt="project demo">
               <img class="slider__slides__slide" id="slide-43" src="assets/images/project43.PNG" alt="project demo">
+            </div>
+            <div class="slider__links">
+              <a class="slider__links__link" href="#slide-41"></a>
+              <a class="slider__links__link" href="#slide-42"></a>
+              <a class="slider__links__link" href="#slide-43"></a>
             </div>
           </div>
           <div class="works__item__description right">
@@ -230,6 +236,10 @@
         <li class="footer__links__link">
           <i class="fab fa-github footer__links__link__icon"></i>
           <a target="_blank" href="https://github.com/synthetiquely">GitHub</a>
+        </li>
+        <li class="footer__links__link">
+          <i class="fab fa-twitter footer__links__link__icon"></i>
+          <a target="_blank" href="https://twitter.com/synthetiquely">Twitter</a>
         </li>
       </ul>
       <form class="form">
