Add a little bit of animation for the page

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -30,19 +30,19 @@
       <section class="expectations">
         <h2 class="expectations__title">Мои ожидания</h2>
         <div class="expectations__grid">
-          <div id="slide-01" class="expectations__grid__item">
+          <div id="slide-01" class="expectations__grid__item visible-1">
             <h3>Лучшие практики</h3>
             <p>Перенять опыт практиков фронт-енд разработки.</p>
           </div>
-          <div id="slide-02" class="expectations__grid__item">
+          <div id="slide-02" class="expectations__grid__item visible-2">
             <h3>Команда</h3>
             <p>Участие в проектной разработке.</p>
           </div>
-          <div id="slide-03" class="expectations__grid__item">
+          <div id="slide-03" class="expectations__grid__item visible-3">
             <h3>Узнать Яндекс изнутри</h3>
             <p>Познакомиться с продуктами и процессами компании изнутри.</p>
           </div>
-          <div id="slide-04" class="expectations__grid__item">
+          <div id="slide-04" class="expectations__grid__item visible-4">
             <h3>Трудоустройство</h3>
             <p>Ищу возможности присоединения к команде, работающей над созданием крутых продуктов.</p>
           </div>
@@ -63,7 +63,7 @@
               <a class="slider__links__link" href="#slide-12"></a>
               <a class="slider__links__link" href="#slide-13"></a>
             </div>
-            <div class="slider__slides">
+            <div class="slider__slides visible-3">
               <img class="slider__slides__slide" id="slide-11" src="assets/images/project11.PNG" alt="project demo">
               <img class="slider__slides__slide" id="slide-12" src="assets/images/project12.PNG" alt="project demo">
               <img class="slider__slides__slide" id="slide-13" src="assets/images/project13.PNG" alt="project demo">
@@ -103,7 +103,7 @@
         </div>
         <div class="works__item">
           <div class="works__item__image slider right">
-            <div class="slider__slides">
+            <div class="slider__slides visible-3">
               <img class="slider__slides__slide" id="slide-21" src="assets/images/project21.PNG" alt="project demo">
               <img class="slider__slides__slide" id="slide-22" src="assets/images/project22.PNG" alt="project demo">
               <img class="slider__slides__slide" id="slide-23" src="assets/images/project23.PNG" alt="project demo">
@@ -145,7 +145,7 @@
               <a class="slider__links__link" href="#slide-32"></a>
               <a class="slider__links__link" href="#slide-33"></a>
             </div>
-            <div class="slider__slides">
+            <div class="slider__slides visible-3">
               <img class="slider__slides__slide" id="slide-31" src="assets/images/project31.PNG" alt="project demo">
               <img class="slider__slides__slide" id="slide-32" src="assets/images/project32.PNG" alt="project demo">
               <img class="slider__slides__slide" id="slide-33" src="assets/images/project33.PNG" alt="project demo">
@@ -181,7 +181,7 @@
         </div>
         <div class="works__item">
           <div class="works__item__image slider right">
-            <div class="slider__slides">
+            <div class="slider__slides visible-3">
               <img class="slider__slides__slide" id="slide-41" src="assets/images/project41.PNG" alt="project demo">
               <img class="slider__slides__slide" id="slide-42" src="assets/images/project42.PNG" alt="project demo">
               <img class="slider__slides__slide" id="slide-43" src="assets/images/project43.PNG" alt="project demo">
