--- a/cities/index.html
+++ b/cities/index.html
@@ -8,6 +8,7 @@
   <title>Cities Game</title>
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="/dist/styles.css">
+  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 </head>
 
 <body>
