Listen to user input, set current city if it is valid

--- a/cities/index.html
+++ b/cities/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="/dist/styles.css">
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwNGn_8MSIiii_q1lhVDzWL2CoWjIS2bc&libraries=places"></script>
 </head>
 
 <body>
